# mfoman.github.io

./: .gitignore  CNAME  Gemfile  _config.yml  feed.xml  index.html  package-lock.json  package.json  script.sh  service-worker-index.html  service-worker.js  sitemap.xml
_includes/: author-profile.html
_includes/head/: custom.html
_pages/: 404.md  about.md
_posts/: 2022-07-26-cpp-01.md
_site/: 404.html  feed.xml  index.html  robots.txt  sitemap.xml
_site/about/: index.html
_site/blog/post-chat/: index.html
_site/blog/post-link/: index.html
_site/blog/post-modified/: index.html
_site/blog/post-notice/: index.html
_site/categories/: index.html
_site/page-2/: index.html
_site/posts/: index.html
_site/tags/: index.html
about/: index.html
assets/css/: main.css  main.scss  tabs.css
blog/: index.html
blog/my-first-blog/: index.html
blog/post-chat/: index.html
blog/post-link/: index.html
blog/post-modified/: index.html
blog/post-notice/: index.html
blog/post-quote/: index.html
blog/post-standard/: index.html
blog/welcome-to-jekyll/: index.html
categories/: index.html
client/: [slug].a56c1e48.js  about.9d51053a.js  client.9cb23b88.js  index.4b4bc5fc.js  index.94451df7.js
client/legacy/: [slug].d121e188.js  about.b64e6f59.js  client.bfcae7a7.js  index.29220c92.js  index.87604c73.js
examples/union-find/: CMakeLists.txt
examples/union-find/src/: main.cpp
examples/union-find/src/uf/: uf.cpp  uf.h
learning/cpp-01/: index.html
posts/: index.html  my-first-blog.md
src/: template.html
tags/: index.html
(+7 files in other folders)
